# coind-sem-while

./: .gitignore  Alternatives.v  BigFunct.v  BigRel.v  BigStepClassical.v  BigStepNodelay.v  ClassicalSound.v  LICENSE  Language.v  Makefile  NodelayComplete.v  README  README.md  SmallFunct.v  SmallRel.v  Trace.v  _CoqProject  coq-coind-hoare-while.opam  coq-coind-opsem-while.opam  coq-coind-resumptions-while.opam  coq-coind-sem-while.opam  dune-project  meta.yml  resumption.v
.github/workflows/: coq-ci.yml  docker-action.yml
theories/: Alternatives.v  Assert.v  AssertClassical.v  BigFunct.v  BigRel.v  BigStep.v  BigStepClassical.v  BigStepNodelay.v  ClassicalComplete.v  ClassicalSound.v  Hoare.v  HoareTotal.v  Language.v  Liveness.v  Markov.v  NodelayComplete.v  NodelaySound.v  Semax.v  SemaxComplete.v  SemaxSound.v  SmallFunct.v  SmallRel.v  Trace.v  Weakbism.v  dune  resumption.v
