opam-version: "2.0"
maintainer: "palmskog@gmail.com"
version: "dev"

homepage: "https://github.com/palmskog/coind-sem-while"
dev-repo: "git+https://github.com/palmskog/coind-sem-while.git"
bug-reports: "https://github.com/palmskog/coind-sem-while/issues"
license: "Unknown"

synopsis: "Soundness and completeness in Coq of a Hoare logic with respect to a coinductive trace-based operational semantics for While"
description: """
A Hoare logic for coinductive trace-based operational semantics for the
While language, proven sound and complete in Coq."""

build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "dune" {>= "2.5"}
  "coq" {(>= "8.10" & < "8.13~") | (= "dev")}
]

tags: [
  "category:Computer Science/Semantics and Compilation/Semantics"
  "keyword:coinduction"
  "keyword:while"
  "keyword:Hoare logic"
  "logpath:CoindHoareWhile"
]
authors: [
  "Keiko Nakata"
  "Tarmo Uustalu"
]
